# DogEngineDependencySetter

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp  README.md  sdl2-config.cmake
CMakeTest01/: CMakeLists.txt  CMakeTest01.cpp  CMakeTest01.h
FileManager/: CMakelists.txt  FileManager.cpp  FileManager.h
GameObject/: CMakelists.txt
Networking/: Cmakelists.txt
SDL2/: CMakeLists.txt  SDL_config.h  SDL_config.h.cmake  msvcrt.lib  sdl2-config.cmake
